third_party/move/move-compiler-v2/tests/lambda/storable/registry_errors.exp

Diagnostics:
error: unexpected token
   ┌─ tests/lambda/storable/registry_errors.move:34:12
   │
34 │         if !done {
   │            ^
   │            │
   │            Unexpected '!'
   │            Expected '('
